--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -12,7 +12,7 @@ body{
     background: #000;
     font-size: 14px;
     color: #fff;
-    font-family: 'Manrope', sans-serif;
+    font-family: 'Manrope', 'Apple SD Gothic Neo',sans-serif;
     font-weight: 400;
     line-height: 20px;
 }
