--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -17,14 +17,14 @@ canvas{ position: fixed; top: 50%; left: 50%; max-width: 100vw; max-height: 100v
 
 @keyframes active{
     from{ transform: 0; }
-    to{ transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(45deg) skew(0deg, 0deg); }
+    to{ transform:rotateZ(45deg)}
 }
 @keyframes move{
     from{ width: 0; height: 4px; transform: 0; }
-    to{ width: 50px; height: 4px; transform:translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(-45deg) skew(0deg, 0deg); }
+    to{ width: 50px; height: 4px; transform:rotateZ(-45deg)}
 }
 
-.menu{ position: fixed; top: -100%; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .88); transition: 1s; z-index: 9; }
+.menu{ position: fixed; top: -100%; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 1); transition: 1s; z-index: 9; }
 .menu.on{ top: 0; }
 .menu .menu-inner{ z-index: 4; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0); flex-direction: column; justify-content: center; padding-left: 13vw; display: flex; position: relative; }
 .menu .nav{ display: flex; font-size: 8vw; font-family: 'Italiana'; line-height: 1.2; margin-left: -6vw; }
